--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Search" name="search" id="search">
             <div class="input-group-btn">
-              <button class="btn btn-default" type="submit" onclick="buscar();"><i class="glyphicon glyphicon-search"></i></button>
+              <button class="btn btn-default" type="submit" onclick="busqueda();"><i class="glyphicon glyphicon-search"></i></button>
             </div>
           </div>
 
